# toy

./: .dockerignore  .gitignore  README.md
apps/toyapi-d/: Cargo.toml
apps/toyapi-d/src/: error.rs  main.rs  opts.rs
apps/toyctl/: Cargo.toml
apps/toyctl/src/: error.rs  main.rs  opts.rs  output.rs
pkg/: Cargo.toml
pkg/examples/: .gitignore  Cargo.toml  serve.rs
pkg/toy/: Cargo.toml
pkg/toy-actor/: Cargo.toml
pkg/toy-actor/src/: actor.rs  config.rs  context.rs  error.rs  lib.rs  msg.rs  task.rs
pkg/toy-api/: Cargo.toml
pkg/toy-api-auth-firebase/: Cargo.toml
pkg/toy-api-auth-firebase/src/: lib.rs
pkg/toy-api-auth-firebase/tests/: test.rs
pkg/toy-api-auth-jwt/: Cargo.toml
pkg/toy-api-auth-jwt/src/: lib.rs
pkg/toy-api-client/: Cargo.toml
pkg/toy-api-client/src/: auth.rs  client.rs  common.rs  error.rs  lib.rs  noop.rs
pkg/toy-api-http-common/: Cargo.toml
pkg/toy-api-http-common/src/: auth.rs  body.rs  codec.rs  error.rs  lib.rs  query.rs  reply.rs  request.rs
pkg/toy-api-server/: Cargo.toml
pkg/toy-api-server/src/: config.rs  lib.rs  reject_handler.rs  server.rs
pkg/toy-api-server/tests/: graphs.rs  services.rs  supervisors.rs
pkg/toy-api-store-etcd/: Cargo.toml
pkg/toy-api-store-etcd/examples/: example.rs
pkg/toy-api-store-etcd/src/: client.rs  error.rs  kv.rs  lib.rs  store.rs  txn.rs  types.rs  watch.rs
pkg/toy-api-store-glogging/: Cargo.toml  env.example
pkg/toy-api-store-glogging/src/: constants.rs  error.rs  lib.rs  store.rs
pkg/toy-api-store-influxdb/: Cargo.toml
pkg/toy-api-store-influxdb/src/: error.rs  lib.rs  store.rs
pkg/toy-api-store-pg/: Cargo.toml
pkg/toy-api-store-pg/migration/: metrics.sql  task_events.sql
pkg/toy-api-store-pg/src/: lib.rs  store.rs
pkg/toy-api/src/: actors.rs  authentication.rs  common.rs  error.rs  graph.rs  lib.rs  metrics.rs  role.rs  role_binding.rs  service.rs  services.rs  supervisors.rs  task.rs
pkg/toy-core/: Cargo.toml  README.md
pkg/toy-core/benches/: bench.rs
pkg/toy-core/examples/: Cargo.toml
pkg/toy-core/src/: channel.rs  context.rs  context_box.rs  error.rs  executor.rs  flow.rs  graph.rs  lib.rs  macros.rs  mpsc.rs  node_channel.rs  oneshot.rs  registry.rs  registry_box.rs  service.rs  service_box.rs  service_id.rs  service_type.rs  service_uri.rs  supervisor.rs  task.rs
pkg/toy-core/tests/: map.rs  metrics.rs  pack.rs  schema.rs  service_type.rs  unpack.rs  value.rs
pkg/toy-executor/: Cargo.toml
pkg/toy-executor/src/: executor.rs  lib.rs  node_channel.rs
pkg/toy-log-collector/: Cargo.toml
pkg/toy-log-collector/src/: main.rs
pkg/toy-rt/: Cargo.toml
pkg/toy-rt/src/: async_rt.rs  join_handle.rs  lib.rs  metrics.rs
pkg/toy-supervisor/: Cargo.toml
pkg/toy-supervisor/src/: beat.rs  config.rs  context.rs  error.rs  event_export.rs  lib.rs  msg.rs  supervisor.rs  task.rs  watcher.rs
pkg/toy-tail/: Cargo.toml
pkg/toy-tail-glogging/: Cargo.toml
pkg/toy-tail-glogging/examples/: tailer.rs
pkg/toy-tail-glogging/src/: handler.rs  lib.rs
pkg/toy-tail/examples/: tailer.rs
pkg/toy-tail/src/: config.rs  error.rs  flagment.rs  flush_timer.rs  handler.rs  lib.rs  reader.rs  regex_parser.rs  tail.rs  watcher.rs
pkg/toy-tail/tests/: reader.rs  regex_match.rs
pkg/toy-tracing/: Cargo.toml
pkg/toy-tracing/src/: lib.rs  logger.rs  tcp.rs
pkg/toy/examples/: hello.rs
pkg/toy/src/: lib.rs
plugins/toy-plugin-commons/: Cargo.toml
plugins/toy-plugin-commons/examples/: Cargo.toml  example.json  file-1.csv  file-2.csv  file.csv  file.rs  file.yml  stat.json  stat.rs  tick.json  tick.rs
plugins/toy-plugin-commons/toy-plugin-buffer/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-collect/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-commons/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-fanout/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-file/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-filter/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-map/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-sort/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-stat/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-stdio/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-tcp/: Cargo.toml
plugins/toy-plugin-commons/toy-plugin-timer/: Cargo.toml
plugins/toy-plugin-js/: Cargo.toml
plugins/toy-plugin-js/benches/: bench.rs
plugins/toy-plugin-js/src/: codec.rs  config.rs  lib.rs  plugin.rs  service.rs
plugins/toy-plugin-js/tests/: codec.rs  service.rs
plugins/toy-plugin-lua/: Cargo.toml
plugins/toy-plugin-lua/benches/: bench.rs
plugins/toy-plugin-lua/src/: error.rs  function.rs  lib.rs  plugin.rs
plugins/toy-plugin-lua/tests/: service.rs
shared/: Cargo.toml
shared/toy-config/: Cargo.toml
shared/toy-config/src/: error.rs  lib.rs  utils.rs
shared/toy-file/: Cargo.toml
shared/toy-file/benches/: bench.rs
shared/toy-file/src/: file_reader.rs  file_writer_builder.rs
shared/toy-file/tests/: reader.rs  row.rs
shared/toy-gauth/: Cargo.toml  env.example
shared/toy-gauth/src/: claims.rs  constants.rs  credential.rs  error.rs  jwk.rs  lib.rs  scope.rs  token.rs
shared/toy-glogging/: Cargo.toml
shared/toy-glogging/examples/: example.rs
shared/toy-glogging/src/: client.rs  error.rs  lib.rs  models.rs
shared/toy-h/: Cargo.toml
shared/toy-h/src/: client.rs  error.rs  impl_reqwest.rs  lib.rs  request.rs  response.rs
shared/toy-influxdb/: Cargo.toml
shared/toy-influxdb/examples/: example.rs
shared/toy-influxdb/src/: client.rs  error.rs  lib.rs
shared/toy-influxdb/tests/: de.rs  lp.rs  query_builder.rs
shared/toy-jwt/: Cargo.toml
shared/toy-jwt/src/: algorithm.rs  decode.rs  encode.rs  error.rs  header.rs  lib.rs  validation.rs
shared/toy-map/: Cargo.toml
shared/toy-pack/: Cargo.toml
shared/toy-pack-derive/: Cargo.toml
shared/toy-pack-json/: Cargo.toml
shared/toy-pack-mp/: Cargo.toml
shared/toy-pack-urlencoded/: Cargo.toml
shared/toy-pack-yaml/: Cargo.toml
shared/toy-rocksdb/: Cargo.toml
shared/toy-test-utils/: Cargo.toml
shared/toy-text-parser/: Cargo.toml
(+612 files in other folders)
