[workspace]
members = [
    "toy",
    "toy-core",
    "toy-executor",
    "toy-rt",
    "toy-supervisor",
    "toy-api",
    "toy-api-client",
    "toy-api-server",
    "toy-api-store-etcd",
    "toy-api-store-glogging",
    "toy-api-auth-firebase",
    "toy-api-auth-jwt",
    "toy-tail",
    "toy-tail-glogging",
    "toy-tracing"
]
