[workspace]
resolver = "2"
members = [
    "toy",
    "toy-core",
    "toy-executor",
    "toy-rt",
    "toy-actor",
    "toy-api",
    "toy-api-client",
    "toy-api-http-common",
    "toy-api-server",
    "toy-api-store-etcd",
    "toy-api-store-influxdb",
    "toy-api-auth-jwt",
    "toy-tracing",
    "toy-api-store-pg"
]
