[workspace]
resolver = "2"
members = [
    "toy",
    "toy-core",
    "toy-executor",
    "toy-rt",
    "toy-actor",
    "toy-api",
    "toy-api-client",
    "toy-api-http-common",
    "toy-api-server",
    "toy-api-store-etcd",
    "toy-api-store-influxdb",
    "toy-api-auth-jwt",
    "toy-tracing",
    "toy-api-store-pg"
]

[workspace.dependencies]
tracing = "0.1"
thiserror = "2.0"
async-trait = "0.1.89"
serde = { version = "1.0" }
tokio = { version = "1.48.0" }
