[package]
name = "toyctl"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
clap = { version = "3.0.0-rc.7", features = ["derive", "env"] }
dotenv = "0.15.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"

toy = { path = "../../pkg/toy", features = ["api-client"] }
toy-tracing = { path = "../../pkg/toy-tracing" }
toy-jwt = { path = "../../shared/toy-jwt" }
toy-rt = { path = "../../pkg/toy-rt" }
toy-pack = { path = "../../shared/toy-pack" }
toy-pack-json = {path = "../../shared/toy-pack-json"}
