[package]
name = "toy-actor"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = "0.4"
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }

tokio = { workspace = true, features = ["sync"] }
toy-core = { path = "../toy-core" }
toy-rt = { path = "../toy-rt" }

# toy api client
toy-api = { path = "../toy-api" }
toy-api-client = { path = "../toy-api-client" }
toy-pack-json = { path = "../../shared/toy-pack-json" }

# actor api server
toy-api-http-common = { path = "../toy-api-http-common", default-features = false, features = ["server"] }
