[package]
name = "toy-api-auth-firebase"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-api-server = {path = "../toy-api-server"}
toy-gauth = {path="../../shared/toy-gauth"}
