[package]
name = "toy-api-auth-jwt"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-api-server = {path = "../toy-api-server"}
toy-api = { path = "../toy-api" }
toy-jwt = {path="../../shared/toy-jwt"}
