[package]
name = "toy-api-client"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1.42"

futures-core = { version = "0.3" }
futures-util = { version = "0.3", default-features = false }

toy-api = { path = "../toy-api" }
toy-h = {path = "../../shared/toy-h", optional = true}
toy-pack = {path = "../../shared/toy-pack", features = ["derive"]}
toy-pack-json = {path = "../../shared/toy-pack-json"}

[features]
# Nothing by default
default = []
http = ["toy-h/impl_reqwest"]
