[package]
name = "toy-api-client"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }

toy-core = { path = "../toy-core" }
toy-api = { path = "../toy-api" }
toy-api-http-common = { path = "../toy-api-http-common", optional = true }
toy-h = { path = "../../shared/toy-h", optional = true }
toy-pack-urlencoded = { path = "../../shared/toy-pack-urlencoded", optional = true }
toy-pack-json = { path = "../../shared/toy-pack-json" }
toy-pack-mp = { path = "../../shared/toy-pack-mp" }

[features]
# Nothing by default
default = []
http = ["toy-h/impl_reqwest", "toy-api-http-common", "toy-pack-urlencoded"]
