[package]
name = "toy-api-http-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["toy-h/impl_reqwest"]
server = ["axum", "axum-server", "axum-extra/typed-header", "tower-http"]

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures-util = { version = "0.3", default-features = false }
axum = { version = "0.8.7", optional = true, features = ["http2"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"], optional = true }
axum-extra = { version = "0.12.2", features = ["typed-header"], optional = true }
tower-http = { version = "0.6.6", features = ["cors", "trace"], optional = true }
bytes = "1.11"
http = "1.3"

toy-h = { path = "../../shared/toy-h" }
toy-core = { path = "../toy-core" }
toy-api = { path = "../toy-api" }
toy-pack-json = { path = "../../shared/toy-pack-json" }
toy-pack-mp = { path = "../../shared/toy-pack-mp" }
toy-pack-yaml = { path = "../../shared/toy-pack-yaml" }
toy-pack-urlencoded = { path = "../../shared/toy-pack-urlencoded" }

[dependencies.rustls]
version = "0.23.17"
features = ["logging", "std", "ring", "tls12"]
default-features = false
