[package]
name = "toy-api-server"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.42"
once_cell = "1.8.0"
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }

toy-api = { path = "../toy-api" }
toy-core = { path = "../toy-core"}
toy-h = {path = "../../shared/toy-h"}
toy-rt = { path = "../toy-rt"}
toy-api-http-common = { path = "../toy-api-http-common", default-features = false, features = ["server"]}
toy-pack-json = {path = "../../shared/toy-pack-json"}

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full", "test-util"] }
tokio-test = "0.4.2"
