[package]
name = "toy-api-server"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = { workspace = true }
once_cell = "1.21.3"
futures-util = { version = "0.3.31", default-features = false }
serde = { workspace = true, features = ["derive"] }

toy-api = { path = "../toy-api" }
toy-core = { path = "../toy-core" }
toy-h = { path = "../../shared/toy-h" }
toy-rt = { path = "../toy-rt" }
toy-api-http-common = { path = "../toy-api-http-common", default-features = false, features = ["server"] }
toy-pack-json = { path = "../../shared/toy-pack-json" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4.2"
