[package]
name = "toy-api-store-etcd"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
futures-util = { version = "0.3", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
serde = { workspace = true, features = ["derive"] }

toy-pack-json = { path = "../../shared/toy-pack-json" }
toy-h = { path = "../../shared/toy-h" }
toy-api-server = { path = "../toy-api-server" }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio = { workspace = true, features = ["full"] }
toy-h = { path = "../../shared/toy-h", features = ["impl_reqwest"] }

[[example]]
name = "example"
path = "examples/example.rs"
