[package]
name = "toy-api-store-glogging"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.10" }
tracing = { version = "0.1" }

toy-pack = {path = "../../shared/toy-pack", features = ["derive"]}
toy-pack-json = {path = "../../shared/toy-pack-json"}
toy-api-server = {path = "../toy-api-server"}

toy-glogging = {path = "../../shared/toy-glogging"}
