[package]
name = "toy-api-store-glogging"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tracing = { version = "0.1" }

toy-pack-json = {path = "../../shared/toy-pack-json"}

toy-api = {path = "../toy-api"}
toy-api-server = {path = "../toy-api-server"}

toy-glogging = {path = "../../shared/toy-glogging"}
toy-h = {path = "../../shared/toy-h"}
