[package]
name = "toy-api-store-influxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1" }

toy-influxdb = {path = "../../shared/toy-influxdb"}
toy-core = { path = "../toy-core"}
toy-api = {path = "../toy-api"}
toy-api-server = {path = "../toy-api-server"}
