[package]
name = "toy-api-store-pg"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
chrono = "0.4.42"

toy-core = { path = "../toy-core" }
toy-api = { path = "../toy-api" }
toy-api-server = { path = "../toy-api-server" }

sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "json", "chrono"] }
