[package]
name = "toy-api"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-core = { path = "../toy-core" }
toy-pack = { path = "../../shared/toy-pack", features = ["derive"] }
