[package]
name = "toy-api"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toy-core = { path = "../toy-core" }
chrono = { version = "0.4", features = ["serde"] }
