[package]
name = "toy-core"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1", features = ["sync"] }
thiserror = "1.0"
tracing = "0.1"
toy-pack = { path = "../../shared/toy-pack", features = ["derive"] }
indexmap = "1.3.2"
itoa = "0.4"
ryu = "1.0"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"]  }

[dev-dependencies]
toy-pack = { path = "../../shared/toy-pack", features = ["derive"] }
toy-pack-json = { path = "../../shared/toy-pack-json" }
tokio = { version = "1", features = ["rt-multi-thread"] }
