[package]
name = "toy-core"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }
itoa = "1.0.4"
ryu = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = { version = "1.21.3" }

toy-pack = { path = "../../shared/toy-pack", features = ["derive"] }
toy-map = { path = "../../shared/toy-map" }

[dev-dependencies]
toy-pack = { path = "../../shared/toy-pack", features = ["derive"] }
toy-pack-json = { path = "../../shared/toy-pack-json" }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4.2"
