[package]
name = "toy-executor"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
toy-core = {path="../toy-core"}
toy-rt = { path = "../toy-rt"}
toy-pack = {path = "../../shared/toy-pack", features = ["derive"]}
