[package]
name = "toy-executor"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
async-trait = "0.1.42"
serde = { version = "1.0" }

toy-core = {path="../toy-core"}
toy-rt = { path = "../toy-rt"}
