[package]
name = "toy-executor"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

toy-core = { path = "../toy-core" }
toy-rt = { path = "../toy-rt" }
