[package]
name = "toy-supervisor"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
chrono = "0.4"
futures-core = { version = "0.3" }
futures-util = { version = "0.3", default-features = false }

tokio = { version = "1", features = ["sync"] }
toy-core = {path="../toy-core"}
toy-rt = { path = "../toy-rt"}
toy-api = { path = "../toy-api" }
toy-api-client = { path = "../toy-api-client"}
