[package]
name = "toy-supervisor"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]  }
thiserror = "1.0"
futures-core = { version = "0.3" }
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1.42"

tokio = { version = "1.19.2", features = ["sync"] }
toy-core = {path="../toy-core"}
toy-rt = { path = "../toy-rt"}

# toy api client
toy-api = { path = "../toy-api" }
toy-api-client = { path = "../toy-api-client"}
toy-pack-json = {path = "../../shared/toy-pack-json"}

# supervisor api server
toy-api-http-common = {path = "../toy-api-http-common", default-features = false, features = ["server"]}
