[package]
name = "toy-tail-glogging"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy-tail = {path = "../toy-tail"}
toy-glogging = {path = "../../shared/toy-glogging"}
toy-pack-json = {path = "../../shared/toy-pack-json"}
toy-h = {path = "../../shared/toy-h"}
async-trait = "0.1.42"
tracing = "0.1"

[dev-dependencies]
toy-h = {path = "../../shared/toy-h", features = ["impl_reqwest"]}
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.2"
dotenv = "0.15.0"
