[package]
name = "toy-tail"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
thiserror = "1.0"

# watch
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.11"

# util
chrono = "0.4"
regex = "1.4.2"
async-trait = "0.1.42"
tokio = { version = "1.11", features = ["sync", "time", "net", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"]}
tokio-stream = { version = "0.1" }
toy-text-parser = {path = "../../shared/toy-text-parser"}

toy-rt = { path = "../toy-rt" }

[dev-dependencies]
tracing-subscriber = "0.2"
