[package]
name = "toy-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-appender = "0.1"
thiserror = "1.0"

tokio = { version = "1", features = ["net", "io-util"] }
