[package]
name = "toy"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
core = ["toy-core"]
supervisor = ["toy-supervisor", "toy-executor", "core"]
api-server = ["toy-api-server"]
api-client-http = ["toy-api-client/http"]
plugin = ["toy-core"]

[dependencies]
# core
toy-core = {path="../toy-core", optional = true}

# supervisor
toy-supervisor = {path="../toy-supervisor", optional = true}
toy-executor = {path="../toy-executor", optional = true}

# api-server
toy-api-server = {path="../toy-api-server", optional = true}

# api-client
toy-api-client = {path = "../toy-api-client", optional = true}

[dev-dependencies]
tracing = "0.1"
toy-pack = {path = "../../shared/toy-pack", features = ["derive"]}
toy-pack-json = {path = "../../shared/toy-pack-json"}
tracing-appender = "0.1"
tracing-subscriber = "0.2"
toy = { path ="./", features = ["supervisor"]}
toy-rt = { path = "../toy-rt"}
