[package]
name = "toy"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
core = ["toy-core"]
supervisor = ["toy-supervisor", "toy-executor", "core"]
api-server = ["toy-api-server"]
api-client = ["toy-api-client/http"]
plugin = ["core"]

[dependencies]
# core
toy-core = {path="../toy-core", optional = true}

# supervisor
toy-supervisor = {path="../toy-supervisor", optional = true}
toy-executor = {path="../toy-executor", optional = true}

# api-server
toy-api-server = {path="../toy-api-server", optional = true}

# api-client
toy-api-client = {path = "../toy-api-client", optional = true}
