[workspace]
members = [
    "examples",
    "toy-plugin-file",
    "toy-plugin-map",
    "toy-plugin-fanout",
    "toy-plugin-timer",
    "toy-plugin-commons",
    "toy-plugin-collect",
    "toy-plugin-stdio",
    "toy-plugin-tcp",
    "toy-plugin-sort",
    "toy-plugin-buffer",
    "toy-plugin-filter",
    "toy-plugin-stat"]
resolver = "2"
