[package]
name = "toy-plugin-js"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-js = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
toy-pack = { path = "../../shared/toy-pack", features = ["derive"]}
toy-core = { path = "../../pkg/toy-core" }

[dev-dependencies]
toy-plugin-test = { path = "../toy-plugin-test" }
tokio = { version = "1.15", features = ["full", "test-util"] }
tokio-test = "0.4.2"
