[package]
name = "toy-plugin-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v8 = "0.82.0"
serde = { version = "1.0", features = ["derive"] }
toy-pack = { path = "../../shared/toy-pack", features = ["derive"] }
toy-core = { path = "../../pkg/toy-core" }
tracing = "0.1"
once_cell = "1.19.0"

[dev-dependencies]
toy-plugin-test = { path = "../toy-plugin-test" }
tokio = { version = "1.19.2", features = ["full", "test-util"] }
tokio-test = "0.4.2"
tracing-subscriber = "0.3.18"
