[package]
name = "toy-gauth"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.1.1"
serde = {version = "1.0", features = ["derive"] }
tracing = "0.1"
thiserror = "1.0"
toy-pack-json = {path = "../toy-pack-json"}
toy-h = {path = "../toy-h"}
