[package]
name = "toy-glogging"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1" }
reqwest = { version = "0.10" }
toy-pack = {path = "../toy-pack", features = ["derive"]}
toy-pack-json = {path = "../toy-pack-json"}
toy-gauth = {path = "../toy-gauth"}
thiserror = "1.0"
