[package]
name = "toy-glogging"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1" }
serde = { version = "1.0" }
toy-pack-json = {path = "../toy-pack-json"}
toy-gauth = {path = "../toy-gauth"}
toy-h = {path = "../toy-h"}
thiserror = "1.0"
