[package]
name = "toy-glogging"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1" }
serde = { version = "1.0" }
toy-pack-json = {path = "../toy-pack-json"}
toy-gauth = {path = "../toy-gauth"}
toy-h = {path = "../toy-h"}
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
#tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-subscriber = { version = "0.2"}
tokio = { version = "1.13", features = ["full"] }
dotenv = "0.15.0"
toy-h = {path = "../toy-h", features = ["impl_reqwest"]}

[[example]]
name = "example"
path = "examples/example.rs"
