[package]
name = "toy-h"
version = "0.1.0"
authors = ["defvar <def.daisuke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
bytes = "1"
http-body = "0.4"
thiserror = "1.0"
async-trait = "0.1.42"

reqwest = { version = "0.11", optional = true }

[features]
# Nothing by default
default = []

impl_reqwest = ["reqwest"]
